[package]
name = "vec-with-positions"
version = "0.1.0"
edition = "2021"
description = "A `Vec` together with positions that move together with the elements if the `Vec`"
authors = ["Victor Porton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
